--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "baseUrl": "./src",
+    "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "./src", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
